# naps2

./: .editorconfig  .gitignore  .gitmodules  0002-fix-feeder-empty-dialog.patch  1  CHANGELOG.md  CImageHelper.cs  CONTRIBUTORS  CPageSizes.cs  CScanSettings.cs  CScannedImage.cs  CScannerAPI.cs  CSettings.cs  Directory.Build.props  FAbout.Designer.cs  FAbout.cs  FAbout.resx  FChooseIcon.Designer.cs  FChooseProfile.resx  FDesktop.Designer.cs  FDesktop.cs  FEditScanSettings.cs  FManageProfiles.Designer.cs  FPDFSave.Designer.cs  FPDFSave.cs  ILProfileIcons.cs  LICENSE  NAPS.csproj  NAPS.psess  NAPS.sln  NAPS2.sln  NAPS2.sln.DotSettings  NAPS2.slnx  NuGet.Config  Program.cs  README.md  SDK-LICENSE  SERVICE_API_DEVELOPMENT_TASKS.md  UTiffViewerCtl.cs  UTiffViewerCtl.resx  (+5 more)
.github/: FUNDING.yml  ISSUE_DRAFT_savefiledialog-invalid-cwd.md
.nuget/: NuGet.targets
Exceptions/: EPaperJam.cs
MAPI/: CMapiMessage.cs
NAPS2.App.ApiServer/: ApiServer.cs  NAPS2.App.ApiServer.csproj  Program.cs  ScanJobManager.cs  ServerAPI.md  TestPlan.md  WebServerExtensions.cs
NAPS2.App.ApiServer.Tests/: ApiServerTests.cs  NAPS2.App.ApiServer.Tests.csproj
NAPS2.App.ApiServer.WebApp/: README.md  app.js  index.html  styles.css
NAPS2.App.Console/: App.config  NAPS2.App.Console.csproj  Program.cs  packages.config
NAPS2.App.Gtk/: NAPS2.App.Gtk.csproj  Program.cs
NAPS2.App.Mac/: Entitlements.plist  Icon.icns  Info.plist  NAPS2.App.Mac.csproj  Program.cs
NAPS2.App.PortableLauncher/: NAPS2.App.PortableLauncher.csproj  Program.cs
NAPS2.App.Server/: App.config  NAPS2.App.Server.csproj  (+4 more)
(+6907 files in other folders)
